--- a/app/src/main/res/layout/del_card_view.xml
+++ b/app/src/main/res/layout/del_card_view.xml
@@ -1,55 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="20dp"
-    android:background="@color/black">
+    app:cardElevation="4dp"
+    app:cardCornerRadius="16dp"
+    android:background="@color/black"
+    android:layout_margin="8dp"
+    tools:ignore="UseAppTint">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/black"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:background="@color/black">
+
+        <TextView
+            android:id="@+id/del_contact_Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="4dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="start|center_vertical"
+            android:layout_marginTop="4dp">
 
+            <!-- Phone Number -->
             <TextView
-                android:id="@+id/del_contact_Name"
-                android:layout_width="wrap_content"
+                android:id="@+id/del_contact_phone_number"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="Names"
-                android:layout_gravity="center"
+                android:text="Phone Number"
                 android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:layout_weight="1"/>
 
             <ImageView
                 android:id="@+id/delete_contacts"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center|end"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:tint="@color/white"
+                android:layout_gravity="end"
                 android:src="@drawable/delete_bucket"
-                tools:ignore="UseAppTint" />
+                android:layout_marginEnd="8dp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/del_contact_phone_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center_vertical"
-            android:text="Phone Number"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
