--- a/app/src/main/res/layout/view_card_list.xml
+++ b/app/src/main/res/layout/view_card_list.xml
@@ -1,37 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="10dp"
-    android:background="@color/black">
+    app:cardElevation="4dp"
+    app:cardCornerRadius="16dp"
+    android:background="@color/black"
+    android:layout_margin="8dp"
+    tools:ignore="UseAppTint">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/black"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="16dp"
+        android:background="@color/black">
 
         <TextView
-            android:id="@+id/delview_contact_Name"
+            android:id="@+id/del_contact_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Names"
+            android:text="Name"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="4dp"/>
 
-        <TextView
-            android:id="@+id/delview_contact_phone_number"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:text="Phone Number"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:orientation="horizontal"
+            android:gravity="start|center_vertical"
+            android:layout_marginTop="4dp">
+
+            <!-- Phone Number -->
+            <TextView
+                android:id="@+id/del_contact_phone_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Phone Number"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
